# Release-Sentinel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPROVEMENTS.md  JUDGE_QUICK_REFERENCE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: release_verdict.json
data/: change_manifest.json  coverage_map.json
data/fixtures/: ambiguous_manifest.json  low_risk_manifest.json
docs/: API.md  ARCHITECTURE.md  ARTIFACTS.md  DEPLOYMENT.md  UIPATH_SETUP.md
outputs/manual-release-sentinel/presentations/release-sentinel/output/: release-sentinel-agenthack.pptx
scripts/: run_demo.ps1  smoke_api.ps1  test.ps1
src/: release_sentinel.py
src/claimspilot/: __init__.py  eligibility.py
src/releasesentinel/: __init__.py  action_center.py  agents.py  api.py  cli.py  config.py  coverage_sync.py  env.py  exceptions.py  flakiness.py  heuristics.py  heuristics.yaml  io.py  llm_triage.py  models.py  pipeline.py  runners.py
submission/: demo-video-script.md  devpost.md  presentation-outline.md
tests/: test_action_center.py  test_api.py  test_claimspilot.py  test_config.py  test_coverage_sync.py  test_exceptions.py  test_flakiness.py  test_history.py  test_pipeline.py
web/static/: dashboard.js  styles.css
web/templates/: dashboard.html
