[project]
name = "release-sentinel"
version = "0.1.0"
description = "Agentic release-risk and self-healing testing prototype for UiPath AgentHack Track 3."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Release Sentinel Team" }]
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "pydantic>=2.8",
  "uvicorn>=0.30",
  "tenacity>=8.2",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "httpx>=0.27",
  "ruff>=0.4",
  "black>=24.0",
  "bandit>=1.7",
  "build>=1.0"
]

[project.scripts]
release-sentinel = "releasesentinel.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src/releasesentinel"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line-too-long (black handles this)

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used
